--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=Spring-Security-Demo
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/Spring_Security_Demo
+spring.datasource.username=postgres
+spring.datasource.password=password
