--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.jpa.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/Spring_Security_Demo
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+api.security.token.secret= ${JWT_SECRET:my-secret-key}
